# pi-mr-nft-agent.

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_READINESS_SUMMARY.md  Dockerfile  HANDOFF.md  LICENSE  PRODUCTION_DEPLOYMENT.md  README.md  SPEED_INSIGHTS.md  docker-compose.yml  eth_account-0.9.0-py3-none-any.whl  eth_keys-0.4.0-py3-none-any.whl  langchain-0.1.0-py3-none-any.whl  langgraph-0.1.1-py3-none-any.whl  pyproject.toml  railway.json  render.yaml  requirements.txt  web3-6.11.0-py3-none-any.whl
.github/workflows/: deploy-production.yml  test-deploy.yml
agents/: __init__.py  catalyst_watcher.py  handoff_coordinator.py  model_scoring_oracle.py  royalty_enforcer.py
app/: main.py
app/templates/: base.html  index.html
contracts/: CatalystPool.sol  ModelRoyaltyNFT.sol
press-agent/: README.md  press_release_generator.py
press-agent/config/: config.json
press-agent/outputs/20251213_065639/: twitter_contracts_ready.txt
scripts/: deploy_pi_evm.sh  seed_first_six_models.py
tests/: test_agents.py
