[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-mr-nft-agent"
version = "1.0.0"
description = "Sovereign Pi MR-NFT inference agent with catalyst pool integration"
authors = [{name = "OINIO", email = "onenoly1010@github.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "web3>=6.20.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "pandas>=2.1.3",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "black>=23.11.0",
    "ruff>=0.1.7",
]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = ">=0.0.49,<0.0.50"
langchain = "^0.1.0"
web3 = "^6.11.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"

[tool.setuptools.packages.find]
include = ["agents*", "contracts*", "app*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
